Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64721

HTTP/2 request with invalid host name does not end in HostNotFound error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.4
    • 5.9.4, 5.10, 5.11
    • Network: HTTP
    • None
    • 655cbb00a0a50588dcf527d2e7fdfeb172ba60ae

    Description

      The code that handles host lookup errors skips HTTP/2 connection type (only handles SPDY) and then instead of correct QNetworkReply::error signal we have a rather cryptic message:

      QHttpNetworkConnectionPrivate::_q_hostLookupFinished could not de-queue request
      

      which is not helping at all. For 5.9 both http/https schemes will fail the same way, for 5.10 http will fail as expected with HostNotFoundError, since we start as HTTP/1.1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes